# Flashinfer

./: .gitignore  CMakeLists.txt
csrc/: _index.cu  estimate.cu  flashinfer_estimate_binding.cu  flashinfer_page_binding.cu  flashinfer_topk_binding.cu  page.cu  topk.cu  tvm_ffi_utils.h
flashinfer/: __init__.py  decode.py  estimate.py  page.py  sparse.py  topk.py  utils.py
flashinfer/jit/: __init__.py  core.py  env.py  estimate.py
include/flashinfer/: estimate.cuh  layout.cuh  page.cuh  topk.cuh
include/flashinfer/attention/: decode.cuh  prefill.cuh  scheduler.cuh
paper/: baseline.py  benches.py  cache.py  e2e.py  estimate.py  llama.py  paged.py  patch_llama.py  profile.py  prompt.txt  run.py  sparse.py  sparse_decode.py  topk.py
paper/benchmark/: sparse_decode.py
paper/benchmarks/: cache.py  estimate.py  topk.py
paper/benchmarks/acc/: estimate.py  page.py  rope.py  sparse.py  topk.py
paper/benchmarks/longbench/: eval.py  pred.py  requirements.txt
paper/benchmarks/longbench/config/: dataset2prompt.json  model2maxlen.json
paper/benchmarks/perf/: cache_decode.py  cache_prefill.py  planner.py  sparse.py  topk.py
paper/model/: attention.py
paper/models/: __init__.py  llama.py  llama_.py
paper/perf/: baseline.py  block_sparse.py  e2e.py  estimate.py  sparse.py  topk.py
paper/tests/: test_estimate.py  test_page.py  test_sparse.py  test_topk.py
paper/utils/: __init__.py  attention.py  cache.py
